--- a/css/estilos.css
+++ b/css/estilos.css
@@ -124,13 +124,22 @@ header {
 }
 
 /* --- Footer --- */
+footer .git{
+	text-align: center;
+	color:rgba(255,255,255,.5);
+	padding: 15px 0;
+	font-size: 20px;
+	text-decoration: none;
+}
 
 footer .copyright {
 	text-align: center;
 	color:rgba(255,255,255,.5);
-	font-size: 16px;
+	font-size: 20px;
 	padding: 15px 0;
+	text-decoration: none;
 }
+
 
 /* --- Paginacion --- */
 
